--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<div id="wrapper">
 		<div id="header">
-			<img src="images/logo.jpg" alt="logo" width:300px height:300px; style='width:100%;'>
+			<img src="images/logo.jpg" alt="logo" width:300px height:300px;>
 		</div>
 
 		<div id="nav">
